--- a/exercicio2.html
+++ b/exercicio2.html
@@ -21,8 +21,13 @@
                 numero--;
             } while (numero>10)*/
 
-            for (var index = 0; index < numero; index++){
+            /*for (var index = 0; index < numero; index++){
                 document.write('Numero '+index+'<hr />  ');
+            }*/
+
+            for (item in document){
+                document.write(item);
+                document.write('<hr />')
             }
         }
     </script>
